Add tests for parity functions getBlock should assign blocks based on index, not value Add dom class to squares depending on content

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,12 @@ body {
     text-align: center;
     width: 34px;
   }
+  .square.zero {
+    background: pink
+  }
+  .square.parity {
+    background: cyan
+  }
   
   .square:focus {
     outline: none;
