--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,11 @@ body {
   .square.parity {
     background: cyan
   }
+
+  .square.highlighted {
+    border-style: solid;
+    border-color: yellow;
+  }
   
   .square:focus {
     outline: none;
