Add corrupt block handler

--- a/src/index.css
+++ b/src/index.css
@@ -1,62 +1,66 @@
 body {
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
-  }
-  
-  ol, ul {
-    padding-left: 30px;
-  }
-  
-  .board-row:after {
-    clear: both;
-    content: "";
-    display: table;
-  }
-  
-  .status {
-    margin-bottom: 10px;
-  }
-  
-  .square {
-    background: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
-    text-align: center;
-    width: 34px;
-  }
-  .square.zero {
-    background: pink
-  }
-  .square.parity {
-    background: cyan
-  }
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin: 20px;
+}
 
-  .square.highlighted {
-    border-style: solid;
-    border-color: yellow;
-  }
-  
-  .square:focus {
-    outline: none;
-  }
-  
-  .kbd-navigation .square:focus {
-    background: #ddd;
-  }
-  
-  .hamming {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .hamming-info {
-    margin-left: 20px;
-  }
-  
+ol,
+ul {
+  padding-left: 30px;
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.status {
+  margin-bottom: 10px;
+}
+
+.square {
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+.square.zero {
+  background: pink;
+}
+.square.parity {
+  background: cyan;
+}
+
+.square.highlighted {
+  border-style: solid;
+  border-color: yellow;
+}
+
+.square.corrupted {
+  color: red
+}
+
+.square:focus {
+  outline: none;
+}
+
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+.hamming {
+  display: flex;
+  flex-direction: row;
+}
+
+.hamming-info {
+  margin-left: 20px;
+}
